--- a/docs/_sass/color_schemes/light.scss
+++ b/docs/_sass/color_schemes/light.scss
@@ -5,6 +5,12 @@
   width: 100%;
 }
 
+// Increase the side bar width as some of the page titles don't fit in the default size.
+$nav-width: 284px;
+
+// Increase the main content area width as some tables assume a larger size.
+$content-width: 900px;
+
 .side-bar {
   @include mq(lg) {
     width: $nav-width;
