--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -21,7 +21,7 @@
   {%- if site.hljs_style %}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/{{site.hljs_style}}.min.css" />
   {%- else %}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/github-gist.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/github.min.css" />
   {%- endif %}
 
   {%- if site.google_analytics %}{% include ganalytics.html %}{% endif %}
