--- a/docs/assets/css/theme_extra.css
+++ b/docs/assets/css/theme_extra.css
@@ -5,6 +5,15 @@
   max-width: 1200px;
 }
 
+/*
+.rst-content div[class^="highlight"] {
+  border: 0;
+}
+
+.rst-content div[class^="highlight"] pre {
+  padding: 0;
+}
+*/
 
 /** Below copied from theme (https://github.com/carlosperate/jekyll-theme-rtd/blob/master/assets/css/theme_extra.css) ------------ */
 
@@ -35,7 +44,7 @@
   white-space: pre;
   word-wrap: normal;
   display: block;
-  padding: 12px;
+  /* padding: 12px; */
   font-size: 12px;
 }
 
@@ -111,8 +120,10 @@ form .search-query {
  */
  .rst-content .admonition code {
   color: #404040;
+/*
   border: 1px solid #c7c9cb;
   border: 1px solid rgba(0, 0, 0, 0.2);
+*/
   background: #f8fbfd;
   background: rgba(255, 255, 255, 0.7);
 }
